--- a/dockerized-app/values.yaml
+++ b/dockerized-app/values.yaml
@@ -1,7 +1,9 @@
 backend:
   image: 549395784991.dkr.ecr.ap-south-1.amazonaws.com/backend-app
+  tag: "1.0.0"
   port: 8080
 
 frontend:
   image: 549395784991.dkr.ecr.ap-south-1.amazonaws.com/frontend-app
   port: 3000
+  tag: "1.0.0"
