--- a/dockerized-app/templates/deployment-backend.yaml
+++ b/dockerized-app/templates/deployment-backend.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: {{ .Values.backend.image }}
+          image: "{{ .Values.backend.image }}:{{ .Values.backend.tag}}"
           ports:
             - containerPort: {{ .Values.backend.port }}
