--- a/dockerized-app/templates/deployment-frontend.yaml
+++ b/dockerized-app/templates/deployment-frontend.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: "{{ .Values.frontend.image }}::{{ .Values.frontend.tag}}"
+          image: "{{ .Values.frontend.image }}:{{ .Values.frontend.tag}}"
           ports:
             - containerPort: {{ .Values.frontend.port }}
