--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "mychart.fullname" . }}-ingress
+  name: {{ include "dockerized-app.fullname" . }}-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
