--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -15,7 +15,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ include "mychart.fullname" . }}-backend
+                name: {{ include "dockerized-app.fullname" . }}-backend
                 port:
                   number: 8080
 {{- end }}
