--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: {{ .Values.ingress.backendHost }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /?(.*)
