--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -11,7 +11,7 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /?(.*)
+          - path: /testdb
             pathType: Prefix
             backend:
               service:
