--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -18,4 +18,14 @@ spec:
                 name: backend
                 port:
                   number: 8080
+    - host: {{ .Values.ingress.host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 8080
 {{- end }}
