--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "dockerized-app.fullname" . }}-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: ""
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.ingress.host }}
 spec:
   ingressClassName: nginx
   rules:
