--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   name: {{ include "dockerized-app.fullname" . }}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: ""
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     external-dns.alpha.kubernetes.io/hostname: {{ .Values.ingress.host }}
 spec:
   ingressClassName: nginx
@@ -28,5 +28,5 @@ spec:
               service:
                 name: frontend
                 port:
-                  number: 8080
+                  number: 3000
 {{- end }}
