--- a/dockerized-app/templates/ingress.yaml
+++ b/dockerized-app/templates/ingress.yaml
@@ -12,17 +12,14 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /testdb
+          - path: /testdb(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: backend
                 port:
                   number: 8080
-    - host: {{ .Values.ingress.host }}
-      http:
-        paths:
-          - path: /
+          - path: /()(.*)
             pathType: Prefix
             backend:
               service:
